Avances en el mediaQuery

--- a/Servicios.html
+++ b/Servicios.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="CSS/Login.css">
 </head>
 <body>
+  <section id="encabezado">
   <header>
     <a href="index.html"> <img src="imagenes/nube.png" id="nube" alt="logoTecnoStorm"></a>
     <a href="index.html"><img src="imagenes/TecnoStorm.png" id="letra" alt="tecnoStorm"></a>
@@ -30,6 +31,7 @@
       </ul>
     </nav>
   </header>
+</section>
   <main>
     <div id="contenedor-registro">
       <div id="contenedorModal" class="contenedorModal2">
@@ -80,7 +82,7 @@
         </div>
       </div>
     </div>
-    <h1>PLANESITOSSS</h1>
+    <h1>Planes</h1>
     <div class="contenedor">
       <div class="caja">
         <img src="imagenes/1.png" class="imagen" alt="Plan Basico">
