--- a/Trabajo.html
+++ b/Trabajo.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/Login.css">
 </head>
 <body>
+  <section id="encabezado">
   <header>
     <a href="index.html"> <img src="imagenes/nube.png" id="nube" alt="logoTecnoStorm"></a>
     <a href="index.html"><img src="imagenes/TecnoStorm.png" id="letra" alt="tecnoStorm"></a>
@@ -29,6 +30,7 @@
       </ul>
     </nav>
   </header>
+</section>
   <main>
     <div id="contenedor-registro">
       <div id="contenedorModal" class="contenedorModal2">
