--- a/Contacto.html
+++ b/Contacto.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="CSS/Contacto.css">
 </head>
 <body>
+  <section id="encabezado">
   <header>
     <a href="index.html"> <img src="imagenes/nube.png" id="nube" alt="logoTecnoStorm"></a>
     <a href="index.html"><img src="imagenes/TecnoStorm.png" id="letra" alt="tecnoStorm"></a>
@@ -30,6 +31,7 @@
       </ul>
     </nav>
   </header>
+</section>
   <main>
     <div id="contenedor-registro">
       <div id="contenedorModal" class="contenedorModal2">
