--- a/Contacto.html
+++ b/Contacto.html
@@ -131,6 +131,7 @@
     </footer> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   <script src="JS/Login.js"></script>
+  <script src="JS/Contacto.js"></script>
 </body>
 
 </html>
