Avance en los MediaQuerys

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </ul>
       </nav>
     </header>
+  </section>
     <main>
       <div id="contenedor-registro">
         <div id="contenedorModal" class="contenedorModal2">
@@ -81,7 +82,6 @@
           </div>
         </div>
       </div>
-    </section>
     <section id="contenedorBotonEncabezado">
       <img src="imagenes/Logo.png" id="logoMediaQuery"> 
       <svg xmlns="http://www.w3.org/2000/svg" id="loginMedia"width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -176,6 +176,6 @@ el mejor servicio a los usuarios.Y poder acercarnos a nuestros empleados para po
   </footer> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   <script src="JS/Login.js"></script>
-  <script src="JS/Index.js"></script>
+  <script src="JS/mediaQuerys.js"></script>
 </body> 
 </html>
