--- a/Servicios.html
+++ b/Servicios.html
@@ -82,11 +82,35 @@
         </div>
       </div>
     </div>
+    <section id="contenedorBotonEncabezado">
+      <img src="imagenes/Logo.png" id="logoMediaQuery"> 
+      <svg xmlns="http://www.w3.org/2000/svg" id="loginMedia"width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg"  id="opcionesMedia"width="50" height="50" fill="currentColor" class="bi bi-arrow-left-right" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z"/>
+</svg>
+</section>
+<section id="contenedorTotalMenu">
+  <section id="menu">
+    <section id="contenedor-x">
+    <svg xmlns="http://www.w3.org/2000/svg"  id="cerrarMenu"width="16" height="16" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
+      <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+      <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+    </svg>
+  </section>
+  <h2>Opciones:</h2>
+  <a href="Servicios.html" class="enlace-menu"> Servicios</a>
+  <a href="Contacto.html"  class="enlace-menu">Contactos</a>
+  <a href="Trabajo.html"   class="enlace-menu"> Trabaja con nosotros</a>
+  </section>
+  </section>
     <h1>Planes</h1>
     <div class="contenedor">
       <div class="caja">
         <img src="imagenes/1.png" class="imagen" alt="Plan Basico">
-        <h2>Plan Básico</h2>
+        <h2 class="txtBasico">Plan <h2 class="txtBasico2"> Básico</h2></h2>
         <ol>
           <li>- 3 Páginas web</li>
           <li>- Sin base de datos</li>
@@ -97,7 +121,7 @@
       </div>
       <div class="caja">
         <img src="imagenes/2.png" class="imagen" alt="Plan estandar">
-        <h2>Plan Estándar</h2>
+        <h2 class="txtEstandar">Plan <h2 class="txtEstandar2"> Estándar</h2></h2>
         <ol>
           <li>- 6 Páginas web</li>
           <li>- Base de datos simple</li>
@@ -108,7 +132,7 @@
       </div>
       <div class="caja">
         <img src="imagenes/3.png" class="imagen" alt="Plan Premium">
-        <h2>Plan Premium</h2>
+        <h2 class="txtPremium">Plan <h2 class="txtPremium2"> Premium</h2></h2>
         <ol>
           <li>- Hasta 20 páginas web</li>
           <li>- Bases de datos</li>
@@ -171,5 +195,6 @@
     </footer> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   <script src="JS/Login.js"></script>
+  <script SRC="js/mediaQuerys.js"></script>
 </body>
 </html>
